[gd_scene load_steps=4 format=2]

[ext_resource path="res://userInterface/Title.tscn" type="PackedScene" id=1]
[ext_resource path="res://userInterface/But_ChangeScene.tscn" type="PackedScene" id=2]
[ext_resource path="res://screens/Character_Add.gd" type="Script" id=3]

[node name="Control" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 3 )

[node name="TextEdit" type="TextEdit" parent="."]
margin_left = 215.0
margin_top = 23.0
margin_right = 997.0
margin_bottom = 447.0

[node name="Title" parent="." instance=ExtResource( 1 )]
anchor_left = 0.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 0.0
margin_top = 0.0
margin_right = 0.0
margin_bottom = 0.0
text = "Create Character (temp)"
__meta__ = {
"_edit_use_anchors_": true
}

[node name="But_SaveChar" type="Button" parent="Title"]
margin_right = 12.0
margin_bottom = 20.0
text = "Save Character"

[node name="But_ChangeScene" parent="Title" instance=ExtResource( 2 )]
margin_left = -1.0
margin_top = 48.0
margin_right = 142.0
margin_bottom = 72.0
text = "Temp: Main Menu"

[node name="But_StartNewGame" parent="Title" instance=ExtResource( 2 )]
margin_top = 98.0
margin_right = 159.0
margin_bottom = 122.0
text = "Temp: Start New Game"

[node name="FileDialog" type="FileDialog" parent="Title"]
margin_left = 164.0
margin_top = 35.0
margin_right = 741.0
margin_bottom = 426.0
access = 1

[node name="HBoxContainer" type="HBoxContainer" parent="."]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -83.0
margin_top = 30.0
margin_right = 83.0
margin_bottom = 388.0
custom_constants/separation = 40

[node name="VBoxContainer" type="VBoxContainer" parent="HBoxContainer"]
margin_right = 105.0
margin_bottom = 358.0
custom_constants/separation = 20

[node name="LabelName" type="Label" parent="HBoxContainer/VBoxContainer"]
margin_right = 105.0
margin_bottom = 31.0
text = "NAME
"

[node name="LineEditName" type="LineEdit" parent="HBoxContainer/VBoxContainer/LabelName"]
margin_top = 25.0
margin_right = 58.0
margin_bottom = 24.0

[node name="LabelProfession" type="Label" parent="HBoxContainer/VBoxContainer"]
margin_top = 51.0
margin_right = 105.0
margin_bottom = 82.0
text = "PROFESSION
"

[node name="LineEditProf" type="LineEdit" parent="HBoxContainer/VBoxContainer/LabelProfession"]
margin_top = 25.0
margin_right = 58.0
margin_bottom = 24.0

[node name="LabelStrength" type="Label" parent="HBoxContainer/VBoxContainer"]
margin_top = 102.0
margin_right = 105.0
margin_bottom = 133.0
text = "STRENGTH
"

[node name="LineEditStrength" type="LineEdit" parent="HBoxContainer/VBoxContainer/LabelStrength"]
margin_top = 25.0
margin_right = 58.0
margin_bottom = 24.0

[node name="LabelIntellect" type="Label" parent="HBoxContainer/VBoxContainer"]
margin_top = 153.0
margin_right = 105.0
margin_bottom = 184.0
text = "INTELLECT
"

[node name="LineEditIntel" type="LineEdit" parent="HBoxContainer/VBoxContainer/LabelIntellect"]
margin_top = 25.0
margin_right = 58.0
margin_bottom = 24.0

[node name="SaveButton" type="Button" parent="HBoxContainer/VBoxContainer"]
margin_top = 204.0
margin_right = 105.0
margin_bottom = 224.0
text = "Save Character"

[node name="VBoxContainer2" type="VBoxContainer" parent="HBoxContainer"]
margin_left = 145.0
margin_right = 224.0
margin_bottom = 358.0
custom_constants/separation = 30

[node name="LabelWillpower" type="Label" parent="HBoxContainer/VBoxContainer2"]
margin_right = 79.0
margin_bottom = 31.0
text = "WILLPOWER
"

[node name="LineEditWill" type="LineEdit" parent="HBoxContainer/VBoxContainer2/LabelWillpower"]
margin_top = 25.0
margin_right = 58.0
margin_bottom = 24.0

[node name="LabelCharm" type="Label" parent="HBoxContainer/VBoxContainer2"]
margin_top = 61.0
margin_right = 79.0
margin_bottom = 75.0
text = "CHARM"

[node name="LineEditCharm" type="LineEdit" parent="HBoxContainer/VBoxContainer2/LabelCharm"]
margin_top = 25.0
margin_right = 58.0
margin_bottom = 24.0

[node name="LabelWeapon" type="Label" parent="HBoxContainer/VBoxContainer2"]
margin_top = 105.0
margin_right = 79.0
margin_bottom = 136.0
text = "WEAPON
"

[node name="LineEditWeapon" type="LineEdit" parent="HBoxContainer/VBoxContainer2/LabelWeapon"]
margin_top = 25.0
margin_right = 58.0
margin_bottom = 24.0

[node name="LabelArmor" type="Label" parent="HBoxContainer/VBoxContainer2"]
margin_top = 166.0
margin_right = 79.0
margin_bottom = 180.0
text = "ARMOR"

[node name="LineEditArmor" type="LineEdit" parent="HBoxContainer/VBoxContainer2/LabelArmor"]
margin_top = 25.0
margin_right = 58.0
margin_bottom = 24.0

[node name="LabelQuote" type="Label" parent="HBoxContainer/VBoxContainer2"]
margin_top = 210.0
margin_right = 79.0
margin_bottom = 224.0
text = "QUOTE"

[node name="LineEditQuote" type="LineEdit" parent="HBoxContainer/VBoxContainer2/LabelQuote"]
margin_top = 25.0
margin_right = 58.0
margin_bottom = 24.0

[connection signal="pressed" from="Title/But_SaveChar" to="." method="_on_But_SaveChar_pressed"]
[connection signal="file_selected" from="Title/FileDialog" to="." method="_on_FileDialog_file_selected"]
